--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -79,7 +79,7 @@ jobs:
             NZBreX_*.zip
 
   build_deb_selfhosted:
-    name: Build deb packages on self-hosted (deb10, deb11, deb12)
+    name: "Build deb packages on self-hosted (deb10, deb11, deb12)"
     runs-on: [self-hosted, Linux, X64, ${{ matrix.runner_label }}]
     strategy:
       matrix:
