--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -165,3 +165,75 @@ jobs:
           files: |
             NZBreX_${{ env.REF_NAME }}-debian-${{ matrix.debian_version }}-amd64.zip
             NZBreX_${{ env.REF_NAME }}-debian-${{ matrix.debian_version }}-amd64.deb
+
+  build_linux_ubuntu:
+    name: Build for Ubuntu ${{ matrix.ubuntu_version }} (x64) on self-hosted runner
+    runs-on:
+      - self-hosted
+      - Linux
+      - X64
+      - ${{ matrix.runner_label }}
+    strategy:
+      matrix:
+        include:
+          - ubuntu_version: ubu2004
+            runner_label: ubu2004
+          - ubuntu_version: ubu2204
+            runner_label: ubu2204
+          - ubuntu_version: ubu2404
+            runner_label: ubu2404
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: 'go.mod'
+
+      - name: Set Ref Name Variable
+        run: |
+          if [ "$GITHUB_EVENT_NAME" != "release" ]; then
+            ref_name=${GITHUB_SHA::7}
+          else
+            ref_name=${{ github.ref_name }}
+          fi
+          echo "REF_NAME=${ref_name}" >> "$GITHUB_ENV"
+
+      - name: Build for Ubuntu ${{ matrix.ubuntu_version }}
+        run: |
+          mkdir -p builds/ubuntu-${{ matrix.ubuntu_version }}/usr/bin
+          binary_name=NZBreX
+          GOARCH=amd64 GOOS=linux go build -ldflags="-s -w -X main.appVersion=${{ env.REF_NAME }}" -o builds/ubuntu-${{ matrix.ubuntu_version }}/usr/bin/$binary_name
+          if [ ! -f cleanHeaders.txt ]; then
+            echo "cleanHeaders.txt not found! Build cannot continue." >&2
+            exit 1
+          fi
+          if [ ! -f provider.sample.json ]; then
+            echo "provider.sample.json not found! Build cannot continue." >&2
+            exit 1
+          fi
+          if [ ! -f provider.ygg.json ]; then
+            echo "provider.ygg.json not found! Build cannot continue." >&2
+            exit 1
+          fi
+          zip -j "NZBreX_${{ env.REF_NAME }}-ubuntu-${{ matrix.ubuntu_version }}-amd64.zip" builds/ubuntu-${{ matrix.ubuntu_version }}/usr/bin/$binary_name cleanHeaders.txt provider.sample.json provider.ygg.json
+
+          # Make deb package
+          mkdir -p builds/ubuntu-${{ matrix.ubuntu_version }}/DEBIAN
+          VERSION=$(echo "${{ github.ref_name }}" | sed 's/^v//')
+          ARCH=amd64
+          echo "Package: NZBreX" >> builds/ubuntu-${{ matrix.ubuntu_version }}/DEBIAN/control
+          echo "Version: ${VERSION}" >> builds/ubuntu-${{ matrix.ubuntu_version }}/DEBIAN/control
+          echo "Maintainer: ${{ github.repository_owner }} <nzbrex@usenet-server.com>" >> builds/ubuntu-${{ matrix.ubuntu_version }}/DEBIAN/control
+          echo "Architecture: ${ARCH}" >> builds/ubuntu-${{ matrix.ubuntu_version }}/DEBIAN/control
+          echo "Description: NZBreX - a cmd line tool to re-upload articles missing from providers" >> builds/ubuntu-${{ matrix.ubuntu_version }}/DEBIAN/control
+          dpkg-deb --root-owner-group --build builds/ubuntu-${{ matrix.ubuntu_version }} NZBreX_${{ env.REF_NAME }}-ubuntu-${{ matrix.ubuntu_version }}-amd64.deb
+
+      - name: Upload Release Assets
+        if: github.event_name == 'release'
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            NZBreX_${{ env.REF_NAME }}-ubuntu-${{ matrix.ubuntu_version }}-amd64.zip
+            NZBreX_${{ env.REF_NAME }}-ubuntu-${{ matrix.ubuntu_version }}-amd64.deb
