--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -7,32 +7,39 @@ on:
 
 jobs:
   build_matrix:
-    name: Build (All platforms/archs on Ubuntu-latest)
+    name: Build (GitHub-hosted matrix: Ubuntu/macOS/Windows)
     runs-on: ubuntu-latest
     strategy:
       matrix:
         os-arch:
-          - name: Linux-amd64
+          - name: ubuntu-22.04-amd64
             os: linux
             arch: amd64
-          - name: Linux-arm64
+            label: ubuntu-22.04
+          - name: ubuntu-22.04-arm64
             os: linux
             arch: arm64
-          - name: Linux-i386
+            label: ubuntu-22.04
+          - name: ubuntu-22.04-i386
             os: linux
             arch: 386
-          - name: macOS-amd64
+            label: ubuntu-22.04
+          - name: macos-amd64
             os: darwin
             arch: amd64
-          - name: macOS-arm64
+            label: macOS
+          - name: macos-arm64
             os: darwin
             arch: arm64
-          - name: Windows-amd64
+            label: macOS
+          - name: windows-amd64
             os: windows
             arch: amd64
-          - name: Windows-i386
+            label: windows
+          - name: windows-i386
             os: windows
             arch: 386
+            label: windows
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -51,7 +58,7 @@ jobs:
           fi
           echo "REF_NAME=${ref_name}" >> "$GITHUB_ENV"
 
-      - name: Build for ${{ matrix.os-arch.name }}
+      - name: Build for ${{ matrix.os-arch.label }} ${{ matrix.os-arch.arch }}
         run: |
           mkdir -p builds/${{ matrix.os-arch.name }}/usr/bin
           if [ "${{ matrix.os-arch.os }}" == "windows" ]; then
@@ -72,8 +79,8 @@ jobs:
             echo "provider.ygg.json not found! Build cannot continue." >&2
             exit 1
           fi
-          zip -j "NZBreX_${{ env.REF_NAME }}-${{ matrix.os-arch.os }}-${{ matrix.os-arch.arch }}.zip" builds/${{ matrix.os-arch.name }}/usr/bin/$binary_name cleanHeaders.txt provider.sample.json provider.ygg.json
-          # Only make .deb packages for Linux
+          zip -j "NZBreX_${{ env.REF_NAME }}-${{ matrix.os-arch.name }}.zip" builds/${{ matrix.os-arch.name }}/usr/bin/$binary_name cleanHeaders.txt provider.sample.json provider.ygg.json
+          # Only make .deb packages for Linux/Ubuntu
           if [ "${{ matrix.os-arch.os }}" == "linux" ]; then
             mkdir -p builds/${{ matrix.os-arch.name }}/DEBIAN
             VERSION=$(echo "${{ github.ref_name }}" | sed 's/^v//')
@@ -83,7 +90,7 @@ jobs:
             echo "Maintainer: ${{ github.repository_owner }} <nzbrex@usenet-server.com>" >> builds/${{ matrix.os-arch.name }}/DEBIAN/control
             echo "Architecture: ${ARCH}" >> builds/${{ matrix.os-arch.name }}/DEBIAN/control
             echo "Description: NZBreX - a cmd line tool to re-upload articles missing from providers" >> builds/${{ matrix.os-arch.name }}/DEBIAN/control
-            dpkg-deb --root-owner-group --build builds/${{ matrix.os-arch.name }} NZBreX_${{ env.REF_NAME }}-${{ matrix.os-arch.os }}-${{ matrix.os-arch.arch }}.deb
+            dpkg-deb --root-owner-group --build builds/${{ matrix.os-arch.name }} NZBreX_${{ env.REF_NAME }}-${{ matrix.os-arch.name }}.deb
           fi
 
       - name: Upload Release Assets
@@ -91,8 +98,8 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            NZBreX_*.zip
-            NZBreX_*.deb
+            NZBreX_${{ env.REF_NAME }}-*.zip
+            NZBreX_${{ env.REF_NAME }}-*.deb
 
   build_linux_debian:
     name: Build for Debian ${{ matrix.debian_version }} (x64) on self-hosted runner
