--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -12,23 +12,31 @@ jobs:
       - self-hosted
       - ${{ matrix.runner_label }}
     strategy:
+      fail-fast: false
       matrix:
         include:
-          # Ubuntu 22.04 cross-builds (on ubu2204 runner)
+        # Alpine Linux cross-builds (musl)
           - runner_label: ubu2204
             os: linux
             arch: amd64
-            name: ubuntu-22.04-amd64
+            name: alpine-amd64
+            libc: musl
           - runner_label: ubu2204
             os: linux
             arch: arm64
-            name: ubuntu-22.04-arm64
+            name: alpine-arm64
+            libc: musl
           - runner_label: ubu2204
             os: linux
             arch: 386
-            name: ubuntu-22.04-i386
-
-          # macOS cross-builds (on ubu2204 runner, emulated/cross-compiled)
+            name: alpine-i386
+            libc: musl
+          - runner_label: ubu2204
+            os: linux
+            arch: arm
+            name: alpine-armv7
+            libc: musl
+          # macOS cross-builds
           - runner_label: ubu2204
             os: darwin
             arch: amd64
@@ -37,18 +45,21 @@ jobs:
             os: darwin
             arch: arm64
             name: macos-arm64
-
-          # Windows cross-builds (on ubu2204 runner, emulated/cross-compiled)
+          # No i386 for macOS, Go does not support darwin/386
+          # Windows cross-builds
           - runner_label: ubu2204
             os: windows
             arch: amd64
             name: windows-amd64
           - runner_label: ubu2204
             os: windows
+            arch: arm64
+            name: windows-arm64
+          - runner_label: ubu2204
+            os: windows
             arch: 386
             name: windows-i386
-
-          # Debian self-hosted builds
+          # Debian 10-12 self-hosted builds amd64
           - runner_label: deb10
             os: linux
             arch: amd64
@@ -61,8 +72,46 @@ jobs:
             os: linux
             arch: amd64
             name: debian-12-amd64
-
-          # Ubuntu self-hosted builds
+          # Debian 10-12 self-hosted builds arm64
+          - runner_label: deb10
+            os: linux
+            arch: arm64
+            name: debian-10-arm64
+          - runner_label: deb11
+            os: linux
+            arch: arm64
+            name: debian-11-arm64
+          - runner_label: deb12
+            os: linux
+            arch: arm64
+            name: debian-12-arm64
+          # Debian 10-12 self-hosted builds 32-bit ARM
+          - runner_label: deb10
+            os: linux
+            arch: arm
+            name: debian-10-armv7
+          - runner_label: deb11
+            os: linux
+            arch: arm
+            name: debian-11-armv7
+          - runner_label: deb12
+            os: linux
+            arch: arm
+            name: debian-12-armv7
+          # Debian 10-12 self-hosted builds i386
+          - runner_label: deb10
+            os: linux
+            arch: 386
+            name: debian-10-i386
+          - runner_label: deb11
+            os: linux
+            arch: 386
+            name: debian-11-i386
+          - runner_label: deb12
+            os: linux
+            arch: 386
+            name: debian-12-i386
+          # Ubuntu 20.04 - 24.04 self-hosted builds amd64
           - runner_label: ubu2004
             os: linux
             arch: amd64
@@ -75,6 +124,45 @@ jobs:
             os: linux
             arch: amd64
             name: ubuntu-24.04-amd64
+        # Ubuntu 20.04 - 24.04 self-hosted builds arm64
+          - runner_label: ubu2004
+            os: linux
+            arch: arm64
+            name: ubuntu-20.04-arm64
+          - runner_label: ubu2204
+            os: linux
+            arch: arm64
+            name: ubuntu-22.04-arm64
+          - runner_label: ubu2404
+            os: linux
+            arch: arm64
+            name: ubuntu-24.04-arm64
+        # Ubuntu 20.04 - 24.04 self-hosted builds 32-bit ARM
+          - runner_label: ubu2004
+            os: linux
+            arch: arm
+            name: ubuntu-20.04-armv7
+          - runner_label: ubu2204
+            os: linux
+            arch: arm
+            name: ubuntu-22.04-armv7
+          - runner_label: ubu2404
+            os: linux
+            arch: arm
+            name: ubuntu-24.04-armv7
+        # Ubuntu 20.04 - 24.04 self-hosted builds i386
+          - runner_label: ubu2004
+            os: linux
+            arch: 386
+            name: ubuntu-20.04-i386
+          - runner_label: ubu2204
+            os: linux
+            arch: 386
+            name: ubuntu-22.04-i386
+          - runner_label: ubu2404
+            os: linux
+            arch: 386
+            name: ubuntu-24.04-i386
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -116,7 +204,7 @@ jobs:
           fi
           zip -j "NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip" builds/${{ matrix.name }}/usr/bin/$binary_name cleanHeaders.txt provider.sample.json provider.ygg.json
           # Only make .deb packages for Linux
-          if [ "${{ matrix.os }}" == "linux" ]; then
+          if [ "${{ matrix.os }}" == "linux" ] && [ "${{ matrix.libc }}" != "musl" ]; then
             mkdir -p builds/${{ matrix.name }}/DEBIAN
             VERSION=$(echo "${{ github.ref_name }}" | sed 's/^v//')
             ARCH=${{ matrix.arch }}
@@ -127,7 +215,20 @@ jobs:
             echo "Description: NZBreX - a cmd line tool to re-upload articles missing from providers" >> builds/${{ matrix.name }}/DEBIAN/control
             dpkg-deb --root-owner-group --build builds/${{ matrix.name }} NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb
           fi
-
+      - name: Upload Build Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-${{ matrix.name }}
+          path: |
+            NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip
+            NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb
+          if-no-files-found: warn
+      - name: Upload Binary (optional)
+        uses: actions/upload-artifact@v4
+        with:
+          name: binary-${{ matrix.name }}
+          path: builds/${{ matrix.name }}/usr/bin/*
+          if-no-files-found: warn
       - name: Upload Release Assets
         if: github.event_name == 'release'
         uses: softprops/action-gh-release@v2
