--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build_matrix:
-    name: "Build Matrix (All Self-hosted)"
+    name: "NZBReX"
     runs-on:
       - self-hosted
       - ${{ matrix.runner_label }}
